--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - "8888:8888"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8888/actuator/health"]
-      interval: 5s
-      timeout: 2s
+      interval: 10s
+      timeout: 5s
       retries: 5
     environment:
       - SPRING_PROFILES_ACTIVE=native
@@ -36,9 +36,10 @@ services:
       config-server:
         condition: service_healthy
     healthcheck:
+      start_period: 30s
       test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health" ]
-      interval: 5s
-      timeout: 2s
+      interval: 10s
+      timeout: 5s
       retries: 5
     networks:
       - condo-net
@@ -47,24 +48,24 @@ services:
       - SPRING_PROFILES_ACTIVE=default
 
   # 3) API Gateway
-  gateway-service:
-    build:
-      context: ./gateway
-    image: gateway-service
-    container_name: gateway-service
-    ports:
-      - "8222:8222"
-    depends_on:
-      config-server:
-        condition: service_healthy
-      discovery-service:
-        condition: service_healthy
-    networks:
-      - condo-net
-    environment:
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka
-      - SPRING_PROFILES_ACTIVE=default
+#  gateway-service:
+#    build:
+#      context: ./gateway
+#    image: gateway-service
+#    container_name: gateway-service
+#    ports:
+#      - "8222:8222"
+#    depends_on:
+#      config-server:
+#        condition: service_healthy
+#      discovery-service:
+#        condition: service_healthy
+#    networks:
+#      - condo-net
+#    environment:
+#      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka
+#      - SPRING_PROFILES_ACTIVE=default
 
   # 4) Redis
   redis:
