--- a/config-server/src/main/resources/configurations/user-service.yml
+++ b/config-server/src/main/resources/configurations/user-service.yml
@@ -12,6 +12,12 @@ spring:
       hibernate:
         format_sql: true
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://auth-service:8081
+
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
     producer:
