re organized files and created register user function

--- a/config-server/src/main/resources/configurations/auth-service.yml
+++ b/config-server/src/main/resources/configurations/auth-service.yml
@@ -30,3 +30,8 @@ spring:
     oauth2:
       authorizationserver:
         issuer: http://auth-service:8081
+
+feign:
+  client:
+    user-service:
+      url: http://user-service:8080
