--- a/config-server/src/main/resources/configurations/auth-service.yml
+++ b/config-server/src/main/resources/configurations/auth-service.yml
@@ -17,19 +17,20 @@ spring:
 
   sql:
     init:
-      mode: always
+      mode: never
       schema-locations:
         - classpath:schema.sql
 
   session:
     store-type: redis
-  redis:
-    host: redis
-    port: 6379
+  data:
+    redis:
+      host: redis
+      port: 6379
   security:
     oauth2:
       authorizationserver:
-        issuer: http://auth-service:8081
+        issuer: http://localhost:8081
 
 feign:
   client:
