--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -1,32 +1,50 @@
+server:
+  port: 8222
+
+spring:
+  application:
+    name: gateway-service
+
+  cloud:
+    gateway:
+      discover:
+        locator:
+          enabled: true
+      default-filters:
+        - TokenRelay
+      routes:
+        - id: user
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/users,/users/**
+          filters:
+            - StripPrefix=1
+
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: gateway
+            client-secret: gateway-secret
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            scope:
+              - openid
+              - profile
+              - email
+        provider:
+          keycloak:
+            authorization-uri: http://localhost:8080/realms/condoflow/protocol/openid-connect/auth
+            token-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/token
+            user-info-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/userinfo
+            jwk-set-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/certs
+      resourceserver:
+        jwt:
+          issuer-uri: http://keycloak:8080/realms/condoflow
+
 management:
   endpoints:
     web:
       exposure:
-        include: gateway,health,info,refresh
-logging:
-  level:
-    org.springframework.cloud.gateway: DEBUG
-server:
-  port: 8222
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-#          issuer-uri: http://auth-service/oauth2/default
-          jwk-set-uri: http://auth-service/.well-known/jwks.json
-  cloud:
-    gateway:
-      server:
-        webflux:
-          routes:
-            - id: user
-              uri: lb://USER-SERVICE
-              predicates:
-                - Path=/users,/users/**
-#              filters:
-#                - TokenRelay
-            - id: auth
-              uri: lb://AUTH-SERVICE
-              predicates:
-                - Path=/auth/**
+        include: gateway,health,info
