--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,3 @@
-networks:
-  condo-net:
-    driver: bridge
-
-volumes:
-  postgres-data:
-
 services:
   # 1) Config Server
   config-server:
@@ -21,6 +14,7 @@ services:
       retries: 5
     environment:
       - SPRING_PROFILES_ACTIVE=native
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka
     networks:
       - condo-net
 
@@ -48,36 +42,56 @@ services:
       - SPRING_PROFILES_ACTIVE=default
 
   # 3) API Gateway
-#  gateway-service:
-#    build:
-#      context: ./gateway
-#    image: gateway-service
-#    container_name: gateway-service
-#    ports:
-#      - "8222:8222"
-#    depends_on:
-#      config-server:
-#        condition: service_healthy
-#      discovery-service:
-#        condition: service_healthy
-#    networks:
-#      - condo-net
-#    environment:
-#      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
-#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka
-#      - SPRING_PROFILES_ACTIVE=default
-
-  # 4) Redis
-  redis:
-    image: redis:7-alpine
-    container_name: redis
+  gateway-service:
+    build:
+      context: ./gateway
+    image: gateway-service
+    container_name: gateway-service
     ports:
-      - "6379:6379"
+      - "8222:8222"
+    depends_on:
+      config-server:
+        condition: service_healthy
+      discovery-service:
+        condition: service_healthy
+      keycloak:
+        condition: service_healthy
+    networks:
+      - condo-net
+    environment:
+      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
+      - SPRING_PROFILES_ACTIVE=default
+
+  # 4) Keycloak
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.1
+    container_name: keycloak
+    depends_on:
+      postgres:
+        condition: service_healthy
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 2s
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ready" ]
+      interval: 10s
+      timeout: 3s
       retries: 5
+    command: start
+    environment:
+      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 8080
+      KC_HOSTNAME_STRICT_BACKCHANNEL: false
+      KC_HTTP_ENABLED: true
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_HEALTH_ENABLED: true
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_USERNAME: ${POSTGRES_USER}
+      KC_DB_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "8080:8080"
+    volumes:
+      - keycloak-data:/opt/keycloak/data
     networks:
       - condo-net
 
@@ -143,7 +157,7 @@ services:
     image: user-service
     container_name: user-service
     ports:
-      - "8080:8080"
+      - "8081:8081"
     environment:
       # Pasamos las mismas vars de Postgres
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/userdb
@@ -162,25 +176,10 @@ services:
     networks:
       - condo-net
 
-  # 9) Auth Service
-  auth-service:
-    build:
-      context: ./services/auth
-    image: auth-service
-    container_name: auth-service
-    ports:
-      - "8081:8081"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/authdb
-      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
-      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+networks:
+  condo-net:
+    driver: bridge
 
-    depends_on:
-      config-server:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    networks:
-      - condo-net
+volumes:
+  postgres-data:
+  keycloak-data:
