--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -7,7 +7,7 @@ spring:
 
   cloud:
     gateway:
-      discover:
+      discovery:
         locator:
           enabled: true
       default-filters:
@@ -22,26 +22,10 @@ spring:
 
   security:
     oauth2:
-      client:
-        registration:
-          keycloak:
-            client-id: gateway
-            client-secret: gateway-secret
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            scope:
-              - openid
-              - profile
-              - email
-        provider:
-          keycloak:
-            authorization-uri: http://localhost:8080/realms/condoflow/protocol/openid-connect/auth
-            token-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/token
-            user-info-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/userinfo
-            jwk-set-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/certs
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak:8080/realms/condoflow
+          issuer-uri: http://localhost:8080/realms/condoflow
+          jwk-set-uri: http://keycloak:8080/realms/condoflow/protocol/openid-connect/certs
 
 management:
   endpoints:
