condo-service setup and removal of user-service (merging)

--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -13,10 +13,10 @@ spring:
       default-filters:
         - TokenRelay
       routes:
-        - id: user
-          uri: lb://USER-SERVICE
+        - id: condo
+          uri: lb://CONDO-SERVICE
           predicates:
-            - Path=/users,/users/**
+            - Path=/users,/users/**,/condo,/condo/**
           filters:
             - StripPrefix=1
 
