updated gateway routes for residents management and deleted yml unexisting auth-service

--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -16,7 +16,7 @@ spring:
         - id: condo
           uri: lb://CONDO-SERVICE
           predicates:
-            - Path=/users,/users/**,/condo,/condo/**
+            - Path=/residents,/residents/**,/condo,/condo/**
           filters:
             - StripPrefix=1
 
