setup of payment service: basic config, security, docker file, gateway routes and database schema creation

--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -17,6 +17,10 @@ spring:
           uri: lb://CONDO-SERVICE
           predicates:
             - Path=/residents,/residents/**,/condo,/condo/**
+        - id: payment
+          uri: lb://PAYMENT-SERVICE
+          predicates:
+            - Path=/payments,/payments/**
 
   security:
     oauth2:
