initial commit for expense service set up and added creation of billing service schema

--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -21,6 +21,10 @@ spring:
           uri: lb://PAYMENT-SERVICE
           predicates:
             - Path=/payments,/payments/**
+        - id: expense
+          uri: lb://EXPENSE-SERVICE
+          predicates:
+            - Path=/expenses,expenses/**
 
   security:
     oauth2:
