--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -203,6 +203,32 @@ services:
     networks:
       - condo-net
 
+  # 10) Expense service
+  expense-service:
+    build:
+      context: ./services/expense
+    image: expense-service
+    container_name: expense-service
+    ports:
+      - "8086:8086"
+    environment:
+      # Pasamos las mismas vars de Postgres
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/expensedb
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+
+      # Kafka
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+    depends_on:
+      kafka:
+        condition: service_started
+      config-server:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    networks:
+      - condo-net
+
 networks:
   condo-net:
     driver: bridge
