docker compose identation error and gateway routes for expense service fixed

--- a/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/config-server/src/main/resources/configurations/gateway-service.yml
@@ -24,7 +24,7 @@ spring:
         - id: expense
           uri: lb://EXPENSE-SERVICE
           predicates:
-            - Path=/expenses,expenses/**
+            - Path=/expenses,/expenses/**
         - id: billing
           uri: lb://BILLING-SERVICE
           predicates:
