styling, fixed some functionalities and created landing page as well as some new endpoints for expenses

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.11.0",
     "@tailwindcss/vite": "^4.1.12",
+    "aos": "^2.3.4",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-oauth2-code-pkce": "^1.23.1",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
